--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: ${{ maxrix.features }} --workspace
+          args: ${{ matrix.features }} --workspace
 
   lints:
     name: Lints
